dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__reader__tests__drop_before_fin_sends_stop_sending.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG Reader dropping stream_id=1 status=Open final_size=None consumed_len=9 total_received_len=9 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 DEBUG Sent FlowReset stream_id=1 error_code=6 reset_target=Stream
0:00:00.000000000 DEBUG Reader dropped before FIN received - sent STOP_SENDING stream_id=1
