dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__reader__tests__out_of_order_reassembly.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG Reader complete - all data consumed stream_id=1 final_size=Some(10) consumed_len=10
0:00:00.000000000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.000000000 DEBUG Reader dropping stream_id=1 status=Complete final_size=Some(10) consumed_len=10 total_received_len=10 is_writing_complete=true is_reading_complete=true
