dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__reader__tests__panic_drop_sends_abnormal_termination_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG Reader dropping stream_id=1 status=Open final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 DEBUG Sent FlowReset stream_id=1 error_code=5 reset_target=Both
0:00:00.000000000 DEBUG Reader dropped during panic - sent FlowReset stream_id=1
